--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-GOOGLE_MAPS_API_KEY=AIzaSyDrIlKE-OzCydDLFrnffUK3Lazd3A3n7vg
+GOOGLE_MAPS_API_KEY="AIzaSyDrIlKE-OzCydDLFrnffUK3Lazd3A3n7vg"
+GEMINI_API_KEY="AIzaSyDmRxYJVe99wvGKUe4PK_mFiVXaqXISrUk"
