--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
     "lint": "expo lint"
@@ -18,22 +18,29 @@
     "@expo/vector-icons": "^14.0.2",
     "@firebase/auth": "^1.8.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.27",
+    "expo-av": "~15.0.2",
     "expo-blur": "~14.0.2",
-    "expo-constants": "~17.0.4",
+    "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.4",
+    "expo-image": "~2.0.4",
+    "expo-image-picker": "~16.0.4",
+    "expo-linking": "~7.0.5",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
+    "expo-speech": "~13.0.1",
+    "expo-speech-recognition": "^1.1.1",
     "expo-splash-screen": "~0.29.21",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.1",
     "expo-system-ui": "~4.0.7",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.2.0",
+    "lottie-react-native": "7.1.0",
     "phosphor-react-native": "^2.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -45,15 +52,17 @@
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-image": "~2.0.4",
-    "expo-image-picker": "~16.0.4"
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/dom-speech-recognition": "^0.0.4",
     "@types/jest": "^29.5.12",
+    "@types/lodash": "^4.17.15",
     "@types/react": "~18.3.12",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.3.0",
+    "@types/socket.io-client": "^1.4.36",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
