--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
     "expo-image-picker": "~16.0.4",
+    "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.5",
     "expo-router": "~4.0.17",
@@ -47,12 +48,16 @@
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "^1.20.1",
+    "react-native-qrcode-svg": "^6.3.14",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "socket.io-client": "^4.8.1"
+    "socket.io-client": "^4.8.1",
+    "react-native-view-shot": "~4.0.3",
+    "expo-sharing": "~13.0.1",
+    "expo-file-system": "~18.0.10"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
