abhi thoda baaki hai

--- a/app.json
+++ b/app.json
@@ -16,6 +16,11 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
+      "config": {
+        "googleMaps": {
+          "apiKey": "AIzaSyDrIlKE-OzCydDLFrnffUK3Lazd3A3n7vg"
+        }
+      },
       "permissions": [
         "RECORD_AUDIO",
         "MODIFY_AUDIO_SETTINGS",
@@ -44,10 +49,20 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
-      ]
+      ],
+      "expo-speech-recognition"
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "ffaf24a4-56d4-4c29-82d2-9cb0165116f2"
+      }
+    },
+    "owner": "ankan321"
   }
 }
