--- a/package.json
+++ b/package.json
@@ -17,22 +17,30 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@firebase/auth": "^1.8.2",
+    "@google/generative-ai": "^0.21.0",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-picker/picker": "^2.11.0",
+    "@react-native-voice/voice": "^3.2.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.27",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.2",
     "expo-constants": "~17.0.5",
+    "expo-dev-client": "~5.0.11",
+    "expo-file-system": "~18.0.10",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
     "expo-image": "~2.0.4",
     "expo-image-picker": "~16.0.4",
+    "expo-intent-launcher": "^12.0.2",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.5",
+    "expo-notifications": "~0.29.13",
     "expo-router": "~4.0.17",
+    "expo-sharing": "~13.0.1",
     "expo-speech": "~13.0.1",
     "expo-speech-recognition": "^1.1.1",
     "expo-splash-screen": "~0.29.21",
@@ -42,32 +50,37 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.2.0",
     "lottie-react-native": "7.1.0",
+    "lucide-react-native": "^0.475.0",
+    "nodemailer": "^6.10.0",
     "phosphor-react-native": "^2.2.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-maps": "^1.20.1",
     "react-native-qrcode-svg": "^6.3.14",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-view-shot": "~4.0.3",
+    "react-native-vosk": "^0.3.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "socket.io-client": "^4.8.1",
-    "react-native-view-shot": "~4.0.3",
-    "expo-sharing": "~13.0.1",
-    "expo-file-system": "~18.0.10"
+    "expo-device": "~7.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/dom-speech-recognition": "^0.0.4",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.15",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "~18.3.12",
     "@types/react-native-maps": "^0.24.1",
     "@types/react-test-renderer": "^18.3.0",
     "@types/socket.io-client": "^1.4.36",
+    "expo-module-scripts": "^4.0.3",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.3",
     "react-test-renderer": "18.3.1",
