--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-GOOGLE_MAPS_API_KEY=""
-GEMINI_API_KEY=""
+GOOGLE_MAPS_API_KEY="AIzaSyDrIlKE-OzCydDLFrnffUK3Lazd3A3n7vg"
+GEMINI_API_KEY="AIzaSyDmRxYJVe99wvGKUe4PK_mFiVXaqXISrUk"
 
